# jabr

./: .gitignore  Cargo.toml  README.md
src/: README.md  jab.rs  lib.rs  utils.rs
src/jab/: callback.rs  context.rs  hyperlink.rs  hypertext.rs  jab_lib.rs  key_binding.rs  relation.rs  role.rs  table.rs  text.rs  version.rs
src/jab/jab_lib/: callbacks.rs  packages.rs
